--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,22 +6,9 @@ name = "rusty-blink"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.5.8"
 cortex-m-rt = "0.6.5"
-cortex-m-semihosting = "0.3.2"
 panic-halt = "0.2.0"
-sam3x = { path = "../sam3x" }
-
-# Uncomment for the panic example.
-# panic-itm = "0.4.0"
-
-# Uncomment for the allocator example.
-# alloc-cortex-m = "0.3.5"
-
-# Uncomment for the device example.
-# [dependencies.stm32f30x]
-# features = ["rt"]
-# version = "0.7.1"
+sam3x8e = { path = "../sam3x8e" }
 
 # this lets you use `cargo fix`!
 [[bin]]
